--- a/UI/src/app/login/login.component.html
+++ b/UI/src/app/login/login.component.html
@@ -10,6 +10,6 @@
         <input type="password" name="password" [(ngModel)]="password" required>
       </label>
       <br>
-      <button type="submit" [disabled]="loginForm.invalid">Login</button>
+      <button type="submit" >Login</button>
     </form>
     <p *ngIf="error">{{ error }}</p>
